Remove obsolete header

--- a/fun4all/offline/analysis/Run13ppDirectPhoton/AnaPHPythiaDirectPhoton/Makefile.am
+++ b/fun4all/offline/analysis/Run13ppDirectPhoton/AnaPHPythiaDirectPhoton/Makefile.am
@@ -8,8 +8,7 @@ lib_LTLIBRARIES = libAnaPHPythiaDirectPhoton.la
 include_HEADERS =
 
 noinst_HEADERS = \
-  AnaPHPythiaDirectPhoton.h \
-  AnaToolsTowerID.h
+  AnaPHPythiaDirectPhoton.h
 
 libAnaPHPythiaDirectPhoton_la_SOURCES = \
   AnaPHPythiaDirectPhoton.C
