--- a/fun4all/offline/analysis/Run13ppDirectPhoton/MissingRatio/Makefile.am
+++ b/fun4all/offline/analysis/Run13ppDirectPhoton/MissingRatio/Makefile.am
@@ -6,8 +6,7 @@ INCLUDES = -I$(includedir) -I$(OFFLINE_MAIN)/include -I$(ROOTSYS)/include
 lib_LTLIBRARIES = libMissingRatio.la
 
 mydatadir = $(datadir)/$(PACKAGE_INCLUDE_DIR)
-dist_mydata_DATA = \
-  dead_eff_run13pp500gev.dat
+dist_mydata_DATA = 
 
 include_HEADERS =
 
