--- a/fun4all/offline/analysis/Run13ppDirectPhoton/warnmap/Makefile.am
+++ b/fun4all/offline/analysis/Run13ppDirectPhoton/warnmap/Makefile.am
@@ -1,25 +1,37 @@
 AUTOMAKE_OPTIONS = foreign
 
+AM_CXXFLAGS = -Wall -Werror
 INCLUDES = -I$(includedir) -I$(OFFLINE_MAIN)/include -I$(ROOTSYS)/include
 
 lib_LTLIBRARIES = \
   libdgpp_warnmap.la
 
-noinst_HEADERS = \
-  GenerateWarnmapLinkDef.h
+#mydatadir = $(datadir)/$(PACKAGE_INCLUDE_DIR)
+#  dist_mydata_DATA =
 
 include_HEADERS = \
   GenerateWarnmap.h
 
+noinst_HEADERS = \
+  GenerateWarnmapLinkDef.h
+
 libdgpp_warnmap_la_SOURCES = \
-  GenerateWarnmap_Dict.C \
-  GenerateWarnmap.cc
+  GenerateWarnmap.cc \
+  GenerateWarnmap_Dict.C
+
+AM_LDFLAGS = \
+  -L$(libdir) \
+  -L$(OFFLINE_MAIN)/lib
 
 libdgpp_warnmap_la_LIBADD = \
-  -L$(libdir) \
-  -L$(OFFLINE_MAIN)/lib \
   -lSubsysReco
 
+#BUILT_SOURCES = testexternals.C
+#noinst_PROGRAMS = testexternals
+#testexternals_LDADD = libdgpp_warnmap.la
+#testexternals.C:
+#	echo "//*** this is a generated file. Do not commit, do not edit" > $@
+#	echo "int main() {return 0;}" >> $@
 
 # Rule for generating CINT dictionaries from class headers.
 GenerateWarnmap_Dict.C: \
@@ -27,6 +39,4 @@ GenerateWarnmap_Dict.C: \
   GenerateWarnmapLinkDef.h
 	rootcint -f $@ -c $(DEFAULT_INCLUDES) $(INCLUDES) $^
 
-clean-local:
-	rm -f *Dict*
-
+CLEANFILES = *Dict* testexternals*
