--- a/fun4all/offline/analysis/Run13ppDirectPhoton/AnaFastMC/configure.ac
+++ b/fun4all/offline/analysis/Run13ppDirectPhoton/AnaFastMC/configure.ac
@@ -1,7 +1,6 @@
 AC_INIT(AnaFastMC, 1.00)
 AC_CONFIG_SRCDIR(Makefile.am)
-
-AM_INIT_AUTOMAKE(AnaFastMC, 1.00)
+AM_INIT_AUTOMAKE
 
 PACKAGE_INCLUDE_DIR=AC_PACKAGE_NAME
 AC_SUBST(PACKAGE_INCLUDE_DIR)
