--- a/fun4all/offline/analysis/Run13ppDirectPhoton/AnaPHPythiaDirectPhoton-macros/pythia.cfg
+++ b/fun4all/offline/analysis/Run13ppDirectPhoton/AnaPHPythiaDirectPhoton-macros/pythia.cfg
@@ -25,5 +25,5 @@ mstp    91 1    // gaussian intrinsic kt
 parp    91 1.5  // intrinsic kt value
 mstp    33 1    // use k factor
 parp    31 2.0  // k factor
-ckin 3 2.0
+ckin    3  2.0  // min parton pt of 2.0
 #mstj   1  2    // independent fragmentation
