Add DC deadmap check in mom sum and charge veto

--- a/fun4all/offline/analysis/Run13ppDirectPhoton/MissingRatio/Makefile.am
+++ b/fun4all/offline/analysis/Run13ppDirectPhoton/MissingRatio/Makefile.am
@@ -36,6 +36,7 @@ AM_LDFLAGS = \
   -L$(OFFLINE_MAIN)/lib
 
 libMissingRatio_la_LIBADD = \
+  -lDirectPhotonPP \
   -lTOAD \
   -lemc \
   -lEmcStatic \
