Added DC deadmap to HadronResponse and AnaFastMC

--- a/fun4all/offline/analysis/Run13ppDirectPhoton/AnaFastMC/Makefile.am
+++ b/fun4all/offline/analysis/Run13ppDirectPhoton/AnaFastMC/Makefile.am
@@ -25,6 +25,7 @@ AM_LDFLAGS = \
   -L$(OFFLINE_MAIN)/lib
 
 libAnaFastMC_la_LIBADD = \
+  -lDirectPhotonPP \
   -lTOAD \
   -lPHPythia \
   -lphool \
