Added script to run from phpythia through pisa to pisaToDST in sequence

--- a/fun4all/offline/analysis/Run13ppDirectPhoton/AnaPHPythiaDirectPhoton-macros/pythia_purehard.cfg
+++ b/fun4all/offline/analysis/Run13ppDirectPhoton/AnaPHPythiaDirectPhoton-macros/pythia_purehard.cfg
@@ -21,10 +21,10 @@ msub    29 1
 msub   114 1
 msub   115 1
 
+mstp    41 1    // turn on all resonance decays
 mstp    61 0    // no initial-state radiation
 mstp    71 0    // no final-state radiation
-mstp    81 0    // no multiple interactions
-mstp    91 0    // no intrinsic kt
-mstp   111 0    // no fragmentation and decay
+mstp    81 0    // no multiparton interactions
+mstp   111 -1   // no fragmentation and decay
 mstp   131 0    // no pile-up events
 ckin    3  2.0  // min parton pt of 2.0
