--- a/fun4all/offline/analysis/Run13ppDirectPhoton/MissingRatio/Makefile.am
+++ b/fun4all/offline/analysis/Run13ppDirectPhoton/MissingRatio/Makefile.am
@@ -12,6 +12,7 @@ lib_LTLIBRARIES = \
 include_HEADERS =
 
 noinst_HEADERS = \
+  AnaToolsTrack.h \
   AnaTrk.h \
   MissingRatio.h \
   PhotonEff.h \
