--- a/fun4all/offline/analysis/Run13ppDirectPhoton/AnaFastMC-macros/pythia.cfg
+++ b/fun4all/offline/analysis/Run13ppDirectPhoton/AnaFastMC-macros/pythia.cfg
@@ -3,7 +3,24 @@ proj    p
 targ    p
 frame   cms
 
-msel    10      // prompt photons
+#msel    10      // prompt photons
+msel    0       // turn on all prod. mechanisms manually
+msub    11 1    // hard QCD processes
+msub    12 1
+msub    13 1    
+msub    28 1
+msub    53 1
+msub    68 1
+msub    91 1    // soft QCD processes
+msub    92 1
+msub    93 1
+msub    94 1
+msub    95 1
+msub    14 1    // prompt photons
+msub    18 1
+msub    29 1
+msub   114 1
+msub   115 1
 
 mstp    91 1    // gaussian intrinsic kt
 parp    91 1.5  // intrinsic kt value
