Use scaled ERT_4x4or trigger for ALL

--- a/fun4all/offline/analysis/Run13ppDirectPhoton/AnaFastMC-macros/pythia.cfg
+++ b/fun4all/offline/analysis/Run13ppDirectPhoton/AnaFastMC-macros/pythia.cfg
@@ -24,3 +24,4 @@ parp    31 2.0  // k factor
 ckin 3 2.0
 ckin 4 3.0
 #mstj   1  2    // independent fragmentation
+#mstj   21 0    // turn off all particle decays
