--- a/fun4all/offline/analysis/Run13ppDirectPhoton/AnaPHPythiaDirectPhoton-macros/pythia.cfg
+++ b/fun4all/offline/analysis/Run13ppDirectPhoton/AnaPHPythiaDirectPhoton-macros/pythia.cfg
@@ -22,3 +22,4 @@ mstp    33 1    // use k factor
 parp    31 2.0  // k factor
 ckin    3  2.0  // min parton pt of 2.0
 #mstj   1  2    // independent fragmentation
+#mstj   21 0    // turn off all particle decays
