Only let PbSc response to hadron showers

--- a/fun4all/offline/analysis/Run13ppDirectPhoton/AnaFastMC-macros/pythia.cfg
+++ b/fun4all/offline/analysis/Run13ppDirectPhoton/AnaFastMC-macros/pythia.cfg
@@ -21,7 +21,7 @@ mstp    91 1    // gaussian intrinsic kt
 parp    91 1.5  // intrinsic kt value
 mstp    33 1    // use k factor
 parp    31 2.0  // k factor
-ckin 3 2.0
-ckin 4 3.0
+ckin 3 4.0
+#ckin 4 3.0
 #mstj   1  2    // independent fragmentation
 #mstj   21 0    // turn off all particle decays
