--- a/fun4all/offline/analysis/Run13ppDirectPhoton/AnaFastMC-macros/pythia.cfg
+++ b/fun4all/offline/analysis/Run13ppDirectPhoton/AnaFastMC-macros/pythia.cfg
@@ -3,24 +3,7 @@ proj    p
 targ    p
 frame   cms
 
-msel    0       // turn on all prod. mechanisms manually
-msub    11 1    // hard QCD processes
-msub    12 1
-msub    13 1    
-msub    28 1
-msub    53 1
-msub    68 1
-msub    14 1    // prompt photons
-msub    18 1
-msub    29 1
-msub   114 1
-msub   115 1
+msel    10      // prompt photons
 
-mstp    91 1    // gaussian intrinsic kt
-parp    91 1.5  // intrinsic kt value
-mstp    33 1    // use k factor
-parp    31 2.0  // k factor
 ckin 3 2.0
 ckin 4 3.0
-#mstj   1  2    // independent fragmentation
-#mstj   21 0    // turn off all particle decays
