--- a/fun4all/offline/analysis/Run13ppDirectPhoton/MissingRatio/Makefile.am
+++ b/fun4all/offline/analysis/Run13ppDirectPhoton/MissingRatio/Makefile.am
@@ -38,6 +38,7 @@ AM_LDFLAGS = \
   -L$(OFFLINE_MAIN)/lib
 
 libMissingRatio_la_LIBADD = \
+  -lAnaFastMC \
   -lDirectPhotonPP \
   -lTOAD \
   -lemc \
