--- a/AnaHistos/hepdata/A_LL.yaml
+++ b/AnaHistos/hepdata/A_LL.yaml
@@ -11,7 +11,7 @@ independent_variables:
 dependent_variables:
 - header: {name: '$A_{LL}$'}
   qualifiers:
-  - {name: '$p_T$ (GeV/c)', value: '$A_{LL}$, $\vec{p}+\vec{p}\rightarrow\gamma^{iso}+X$ $\sqrt{s} = 510$ GeV, $|\eta|<0.25$'}
+  - {name: '$p_T$ (GeV/c)', value: '$A_{LL}$, $\vec{p}+\vec{p}\rightarrow\gamma^{iso}+X$, $\sqrt{s} = 510$ GeV, $|\eta|<0.25$'}
   values:
   - value: -2.2646e-03
     errors:
